update page home store maker

--- a/shop-clothes/custom-store/src/css/detailHome.css
+++ b/shop-clothes/custom-store/src/css/detailHome.css
@@ -10,18 +10,57 @@
 .plc-action {
   background-color: rgb(233, 234, 236) !important;
 }
-.call-admin {
+
+/*service store */
+.service-store {
   background: #fff !important;
   color: #8861bb;
   width: 100%;
   border-radius: 5px;
   height: 100px;
 }
-.link-admin {
-  display: flex;
-  align-items: center;
-  flex-direction: row-reverse;
+.service-store {
+  width: 100%;
+  overflow-x: scroll;
+  white-space: nowrap;
 }
+
+.service-store::-webkit-scrollbar {
+  display: none; /* Ẩn thanh cuộn ngang */
+}
+
+.slider-container {
+  display: flex;
+}
+
+.slider-item {
+  flex: 0 0 auto;
+  margin-right: 16px; /* Adjust the gap between items as needed */
+}
+/* end service store */
+
+/* category product */
+.category-product {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 16px; /* Khoảng cách giữa các phần tử */
+}
+
+.boder-image {
+  border: 1px solid #ddd; /* Ví dụ về viền cho hình ảnh */
+  padding: 4px; /* Khoảng cách giữa hình ảnh và viền */
+}
+
+.text-gray {
+  color: gray; /* Ví dụ về màu chữ */
+}
+/* end category product */
+
 .text-success {
   font-size: 14px;
   padding: 10px;
