--- a/mini-app-private/login-sofware/src/css/detailhome/slider.css
+++ b/mini-app-private/login-sofware/src/css/detailhome/slider.css
@@ -9,6 +9,11 @@
     padding-top: 50px;
     padding-bottom: 50px;
   }
+
+  .swiper-container{
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
   
   .swiper-slide {
     background-position: center;
@@ -28,7 +33,7 @@
   
   .image-slider {
     width: 100%; 
-    height: 114px; 
+    height: auto; 
     border-radius: 10px;
   }
 /* Thay đổi màu sắc của các nút thanh cuộn */
