--- a/wind-lap-trinh/contact-wind/src/css/cart/paymentDetail.css
+++ b/wind-lap-trinh/contact-wind/src/css/cart/paymentDetail.css
@@ -25,7 +25,7 @@
 .title-sum-cart{
     font-size: 14px;
     font-weight: 500;
-    color: #ffa53d;
+    color: #028090;
 }
 .title-frre-payment{
     font-size: 14px;
