--- a/wind-lap-trinh/contact-wind/src/css/update/updateCart.css
+++ b/wind-lap-trinh/contact-wind/src/css/update/updateCart.css
@@ -23,7 +23,7 @@
     color: #878686;
   }
   .btn-home-cart-update{
-    background-color: #ffa53d;
+    background-color: #028090;
     margin-top: 10px;
   }
   .btn-home-update:hover{
