--- a/wind-lap-trinh/contact-wind/src/css/user/userPage.css
+++ b/wind-lap-trinh/contact-wind/src/css/user/userPage.css
@@ -3,7 +3,7 @@
   .info-section, .steps-section, .form-section {
     margin-bottom: 20px;
     margin-bottom: 20px;
-    background: #ffa53d;
+    background: #028090;
     padding: 10px 20px 20px 10px;
         border-radius: 10px;
     color: #ffffff;
