--- a/wind-lap-trinh/contact-wind/src/css/cart/orderProduct.css
+++ b/wind-lap-trinh/contact-wind/src/css/cart/orderProduct.css
@@ -30,10 +30,10 @@
   }
   
   .btn-payment {
-   background: #ffa53d !important;
+   background: #028090 !important;
   }
   .calculate-total{
     font-weight: 500;
-    color: #ffa53d;
+    color: #028090;
   }
   
