--- a/shop-nike/src/pages/shared/styles/app.css
+++ b/shop-nike/src/pages/shared/styles/app.css
@@ -1,12 +1,20 @@
+/* setting zalo  */
+#wrapper-frame #right-buttons{
+  color: #ffffff !important;
+}
+
+/* end setting  */
 /* home  */
 .home{
   background-color: #ffffff;
+  margin-bottom: 30px;
 }
 .icon-active{
   color: #0f0f0f !important;
 }
 .check-wind{
   color: #148ed5 !important;
+  font-size: 18px !important;
 }
 .img-ai{
   width: 50px;
@@ -19,7 +27,7 @@ body {
   padding-top: calc(var(--zaui-safe-area-inset-top, 0px) + 44px);
 }
 .page-custom-header {
-  background-color: #1e2121 !important;
+  background-color: black !important;
   color: white;
 }
 .custom-header-account {
