update model product and home

--- a/shop-nike/src/css/cart/infomationPayment.css
+++ b/shop-nike/src/css/cart/infomationPayment.css
@@ -83,7 +83,7 @@
     margin-bottom: 100px;
 }
 .ticker-ship{
-    color: #0be0a9;
+    color: black;
     border: 1px solid;
     padding-left: 22px;
     font-size: 11px;
