--- a/shop-nike/src/css/cart/home.css
+++ b/shop-nike/src/css/cart/home.css
@@ -1,7 +1,13 @@
+.cart-page{
+  background-color: white;
+}
+.box-cart-page{
+  padding: 10px;
+}
 .index-cart-item {
   transition: box-shadow 0.3s ease, transform 0.3s ease; /* Smooth transition */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Initial box-shadow */
-  background-color: #fff;
+  background-color: white;
   border-radius: 8px;
   padding: 12px;
   margin-bottom: 10px;
@@ -13,7 +19,7 @@
 
 .cart-item {
   display: flex;
-  align-items: center;
+  align-items: start;
   flex: 1;
 }
 
@@ -38,13 +44,17 @@
 .cart-item-name {
   font-size: 16px;
   font-weight: bold;
-  margin-bottom: 8px;
+  margin-bottom: 2px;
 }
-
+.cart-item-size{
+  color: #808080;
+  font-size: 14px;
+  font-weight: 400;
+}
 .cart-item-price {
   font-size: 14px;
   margin-bottom: 4px;
-  color: #91857c;
+  color: black;
   font-weight: 500;
 }
 
@@ -60,8 +70,9 @@
 }
 
 .quantity-btn {
-  background-color: #f5f5f5;
-  border: 1px solid #f5f5f5;
+  background-color: #ffffff;
+  border: 1px solid #2e2d2d;
+  color: black;
   border-radius: 4px;
   padding: 5px 10px;
   cursor: pointer;
@@ -70,14 +81,15 @@
 }
 
 .quantity-btn:hover {
-  background-color: #ffd1d1;
-  border: 1px solid #ffd1d1;
+  background-color: #d5d5d5;
+  border: 1px solid #d5d5d5;
+  color: black;
 }
 
 .quantity-input {
   width: 43px;
   text-align: center;
-  border: 1px solid #ddd;
+  border: 1px solid #2e2d2d;
   border-radius: 4px;
   margin: 0 5px;
   font-size: 16px;
