--- a/shop-nike/src/css/cart/infomationVoucher.css
+++ b/shop-nike/src/css/cart/infomationVoucher.css
@@ -39,12 +39,12 @@
 .title-ticker{
     font-size: 14px;
     font-weight: 500;
-    color: #00b815;
+    color: black;
 }
 .descript-ticker{
     font-size: 11px;
     font-weight: 500;
-    color: #00b815;
+    color: black;
 }
 .sum-voucher{
     color: orange;
