update code model loading 90%

--- a/shop-nike/src/css/detailhome/newform.css
+++ b/shop-nike/src/css/detailhome/newform.css
@@ -59,7 +59,7 @@
 }
 
 .item-card-new-form:nth-child(2) {
-  background-image: url("https://i.pinimg.com/originals/23/d9/65/23d9657c9a29976a04fef12ff5cfceb8.gif");
+  background-image: url("https://cdn.dribbble.com/users/4973491/screenshots/11611040/media/4785c6201e79cb18be0c0baa2deb35c5.gif");
 }
 
 .item-card-new-form:nth-child(3) {
