--- a/shop-nike/src/pages/shared/styles/app.css
+++ b/shop-nike/src/pages/shared/styles/app.css
@@ -9,6 +9,14 @@ body{
   height: 387px;
   overflow-y: auto;
 }
+.zaui-input{
+  height: 33px;
+  border-radius: 8px;
+}
+.zaui-input-affix-wrapper:hover, .zaui-input-affix-wrapper:focus, .zaui-input-affix-wrapper:focus-visible {
+  border-color: unset;
+}
+
 .size-list {
   max-height: 300px; /* Hoặc chiều cao bạn muốn */
   overflow-y: auto; /* Cho phép cuộn dọc */
