--- a/shop-nike/src/css/profile/home.css
+++ b/shop-nike/src/css/profile/home.css
@@ -25,27 +25,59 @@
   display: flex;
   justify-content: space-between;
   margin-top: 30px;
-  border-top: 1px solid #e0e0e0;
 }
 
 .profile-func-item {
   flex: 1;
-  padding: 20px 0;
+  display: flex;
+  flex-direction: column; /* Aligns icon and name vertically */
+  justify-content: center; /* Centers the content vertically */
+  align-items: center; /* Centers the content horizontally */
 }
 
 .border-right {
-  border-right: 1px solid #e0e0e0;
+  border-right: 1px solid #dedede;
 }
 
 .profile-func-icon {
   margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center; /* Ensures icon is centered */
 }
 
 .profile-func-name {
   font-size: 14px;
+  text-align: center; /* Centers the title text */
 }
-.name-profile{
+
+.name-profile {
   font-weight: 500;
   padding-bottom: 10px;
 }
+
 /* and profile infomation  */
+
+/* event  */
+.box-event{
+  padding: 0px 15px;
+}
+.item-box-event{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #ccc;
+
+}
+.title-item-event{
+  font-weight: 500;
+  font-size: 20px;
+}
+.description-item-event{
+  padding-top: 5px;
+  font-size: 12px;
+  color: #828282;
+}
+/* end event  */
