update custom header

--- a/shop-nike/src/pages/shared/styles/app.css
+++ b/shop-nike/src/pages/shared/styles/app.css
@@ -19,12 +19,16 @@ body{
 .zaui-header::after{
   height: unset;
 }
-
+.zaui-tabs-tabbar::after{
+  height: unset;
+}
 .size-list {
   max-height: 300px; /* Hoặc chiều cao bạn muốn */
   overflow-y: auto; /* Cho phép cuộn dọc */
 }
-
+.header-hidden{
+  display: none !important;
+}
 /* end setting  */
 /* home  */
 .home{
